# ERPserver

./: .gitlab-ci.yml  Dockerfile  README.md  build_and_run.sh  log.md  manage.py  pyproject.toml  requirements.txt  run.sh
apiHub/Marketting/: InsetItem.l2
apiHub/planning_api/: Material_api.md
erpbackend/: asgi.py  settings.py  urls.py  wsgi.py
loginManager/: apps.py  models.py  serializers.py  urls.py  views.py
loginManager/migrations/: 0001_initial.py
marketing/: data.json  deconstruct.py  jsons.py  models.py  procedure.py  serializers.py  urls.py  views.py
marketing/migrations/: 0001_initial.py  0002_addresss_item_marketing.py  0002_addresss_item_marketing_delete_order.py  0002_alter_addresss_address_line_1_and_more.py  0002_alter_addresss_group_alter_item_item_group.py  0002_alter_marketing_buyer_tel_no_and_more.py  0003_addresss_telephone_no_marketing_amount_and_more.py  0003_alter_addresss_group_alter_item_item_group.py  0003_alter_item_options_alter_marketing_options_and_more.py  0003_remove_marketing_id_alter_marketing_no.py  0004_rename_addr_line1_addresss_address_line_1_and_more.py  0005_remove_marketing_cess_and_more.py  0006_marketing_cess_marketing_dispatch_advanced_checkpost_and_more.py  0007_alter_marketing_date_alter_marketing_po_date.py  0008_alter_marketing_delivery_date_and_more.py  (+2 more)
materials/: models.py  serializers.py  urls.py  views.py
notifications/: __init__.py  models.py  serializers.py  signal.py  tests.py  urls.py  views.py
planning/: models.py  procedure.py  serializer.py  urls.py  views.py
scripts/: csvtosDB.py
(+26 files in other folders)
