[tool.poetry]
name = "erpbackend"
version = "0.1.0"
description = ""
authors = ["Sreedeep CV <sreedeep200@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.7"
psycopg = "^3.1.8"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
